@@ -11,7 +11,6 @@ import greencity.dto.bag.BagMappingDto;
 import greencity.dto.bag.ReasonNotTakeBagDto;
 import greencity.dto.certificate.CertificateDtoForSearching;
 import greencity.dto.employee.EmployeePositionDtoRequest;
-import greencity.dto.order.AdminCommentDto;
 import greencity.dto.order.CounterOrderDetailsDto;
 import greencity.dto.order.DetailsOrderInfoDto;
 import greencity.dto.order.EcoNumberDto;
@@ -67,7 +66,8 @@ import greencity.repository.ServiceRepository;
 import greencity.repository.TariffsInfoRepository;
 import greencity.repository.UserNotificationRepository;
 import greencity.repository.UserRepository;
-import greencity.service.locations.LocationApiService;
+import greencity.repository.CityRepository;
+import greencity.repository.DistrictRepository;
 import greencity.service.notification.NotificationServiceImpl;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -118,7 +118,6 @@ import static greencity.ModelUtils.TEST_ORDER_DETAILS_INFO_DTO_LIST;
 import static greencity.ModelUtils.TEST_PAYMENT_LIST;
 import static greencity.ModelUtils.TEST_USER;
 import static greencity.ModelUtils.UPDATE_ORDER_PAGE_ADMIN_DTO;
-import static greencity.ModelUtils.getAdminCommentDto;
 import static greencity.ModelUtils.getAdminEmployee;
 import static greencity.ModelUtils.getBagInfoDto;
 import static greencity.ModelUtils.getBaglist;
@@ -259,9 +258,6 @@ class UBSManagementServiceImplTest {
     TariffsInfoRepository tariffsInfoRepository;
 
     @Mock
-    private LocationApiService locationApiService;
-
-    @Mock
     RefundRepository refundRepository;
     @Mock
     private OrderBagService orderBagService;
@@ -279,6 +275,10 @@ class UBSManagementServiceImplTest {
     private UserNotificationRepository userNotificationRepository;
     @Mock
     private NotificationParameterRepository notificationParameterRepository;
+    @Mock
+    private CityRepository cityRepository;
+    @Mock
+    private DistrictRepository districtRepository;
 
     @Test
     void getAllCertificates() {
@@ -1061,24 +1061,6 @@ class UBSManagementServiceImplTest {
     }
 
     @Test
-    void testSaveAdminToOrder() {
-        Order order = getOrder();
-        TariffsInfo tariffsInfo = getTariffsInfo();
-        order.setTariffsInfo(tariffsInfo);
-        Employee employee = getEmployee();
-
-        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
-        when(employeeRepository.findByEmail("test@gmail.com")).thenReturn(Optional.of(employee));
-        when(tariffsInfoRepository.findTariffsInfoByIdForEmployee(1L, 1L)).thenReturn(Optional.of(tariffsInfo));
-
-        ubsManagementService.saveAdminCommentToOrder(getAdminCommentDto(), "test@gmail.com");
-
-        verify(orderRepository).findById(1L);
-        verify(employeeRepository).findByEmail("test@gmail.com");
-        verify(tariffsInfoRepository).findTariffsInfoByIdForEmployee(1L, 1L);
-    }
-
-    @Test
     void testUpdateEcoNumberForOrderById() {
         when(orderRepository.findById(1L)).thenReturn(Optional.of(getOrder()));
         ubsManagementService.updateEcoNumberForOrderById(getEcoNumberDto(), 1L, "abc");
@@ -1112,15 +1094,6 @@ class UBSManagementServiceImplTest {
         ecoNumberDto.setEcoNumber(new HashSet<>(List.of("1234a")));
         assertThrows(BadRequestException.class,
                 () -> ubsManagementService.updateEcoNumberForOrderById(ecoNumberDto, 1L, "abc"));
-        verify(orderRepository).findById(1L);
-    }
-
-    @Test
-    void saveAdminCommentThrowsException() {
-        when(orderRepository.findById(1L)).thenReturn(Optional.empty());
-        AdminCommentDto adminCommentDto = getAdminCommentDto();
-        assertThrows(NotFoundException.class,
-                () -> ubsManagementService.saveAdminCommentToOrder(adminCommentDto, "abc"));
         verify(orderRepository).findById(1L);
     }
 
@@ -2335,7 +2308,7 @@ class UBSManagementServiceImplTest {
         when(certificateRepository.findCertificate(1L)).thenReturn(getCertificateList());
         when(orderRepository.findById(anyLong())).thenReturn(Optional.of(order));
         when(serviceRepository.findServiceByTariffsInfoId(1L)).thenReturn(Optional.of(getService()));
-        when(modelMapper.map(getBaglist().get(0), BagInfoDto.class)).thenReturn(bagInfoDto);
+        when(modelMapper.map(getBaglist().getFirst(), BagInfoDto.class)).thenReturn(bagInfoDto);
         when(orderStatusTranslationRepository.getOrderStatusTranslationById(6L))
             .thenReturn(Optional.ofNullable(getStatusTranslation()));
         when(orderStatusTranslationRepository.findAllBy()).thenReturn(getOrderStatusTranslations());
